Lots of playing & planning new explorations

--- a/Website/Components/Layout/MainLayout.razor
+++ b/Website/Components/Layout/MainLayout.razor
@@ -1,6 +1,19 @@
 ﻿@inherits LayoutComponentBase
 
-@Body
+<SiteNav />
+<main class="container">
+    @Body
+</main>
+<footer class="container" data-theme="dark">
+    <hr />
+    <ul>
+        <li><i class="las la-file-code"></i> Based on the Blazor 8 (Empty) template.</li>
+        <li><i class="lab la-css3-alt"></i> Using the <a href="https://picocss.com/" target="_blank" rel="noopener noreferrer">PicoCSS</a> No-Class Stylesheet.</li>
+        <li><i class="lab la-font-awesome"></i> <a href="https://icons8.com/line-awesome" target="_blank" rel="noopener noreferrer">Line-Awesome</a> icons by <a target="_blank" href="https://icons8.com" rel="noopener noreferrer">Icons8</a>.</li>       
+        <li><img src="/Images/icons8-education-16.png" alt="Favicon" /> Favicon by <a target="_blank" href="https://icons8.com" rel="noopener noreferrer">Icons8</a>.</li>   
+    </ul>
+    <p>&copy; 2024 - Instructor Dan</p>
+</footer>
 
 <div id="blazor-error-ui">
     An unhandled error has occurred.
