--- a/Website/Components/Pages/Home.razor
+++ b/Website/Components/Pages/Home.razor
@@ -1,4 +1,6 @@
 ﻿@page "/"
+@using Humanizer
+@rendermode InteractiveServer
 
 <PageTitle>Home</PageTitle>
 
@@ -7,18 +9,36 @@
 Welcome to your new app.
 
 @code {
-    private string? DirPath;
-    private IEnumerable<string> OtherPaths;
+    enum OSPath { WindowsCompatible, LinuxCompatible }
+    private string? CurrentDirectory;
+    private string? PathRoot;
+    private OSPath HostedFileSystem;
+    private IEnumerable<string> OtherFiles;
     private string? Errors;
     private MarkupString ReadMe;
     private string Markdown;
+    private IEnumerable<string> ExcludedWinDirectories = new string[] { @"C:\Windows", @"C:\Program Files", @"C:\Program Files (x86)", @"C:\ProgramData", @"C:\Users", @"C:\$Recycle.Bin", @"C:\System Volume Information", @"C:\pagefile.sys", @"C:\hiberfil.sys", @"C:\Config.Msi" };
+    private IEnumerable<string> ExcludedNixDirectories = new string[] { @"/proc", @"/sys", @"/dev", @"/boot", @"/tmp", @"/run", @"/home", @"/root", @"/etc", @"/var", @"/opt", @"/srv", @"/bin", @"/sbin", @"/lib", @"/lib64", @"/usr", @"/var" };
     protected override void OnInitialized()
     {
-        DirPath = Directory.GetCurrentDirectory();
+        CurrentDirectory = Directory.GetCurrentDirectory();
+        PathRoot = Directory.GetDirectoryRoot(CurrentDirectory);
+        HostedFileSystem = PathRoot.Length == 1 ? OSPath.LinuxCompatible : OSPath.WindowsCompatible;
         try
         {
-            OtherPaths = Directory.EnumerateFiles(@"C:\GH\2024-Jan-In-Class\Marking");
-            var found = OtherPaths.FirstOrDefault(x => x.EndsWith("ReadMe.md", StringComparison.InvariantCultureIgnoreCase));
+            var excludedFolders = HostedFileSystem == OSPath.WindowsCompatible ? ExcludedWinDirectories : ExcludedNixDirectories; // List of folder names to skip
+
+            var options = new EnumerationOptions
+            {
+                IgnoreInaccessible = true,
+                RecurseSubdirectories = true // Set this to false if you want to exclude subdirectories
+            };
+            var markingPath = 
+                Directory
+                    .EnumerateDirectories(PathRoot,"*dgilleland",options)
+                    .FirstOrDefault(dir => !excludedFolders.Any(dir.Contains));
+            OtherFiles = Directory.EnumerateFiles(markingPath);
+            var found = OtherFiles.FirstOrDefault(x => x.EndsWith("ReadMe.md", StringComparison.InvariantCultureIgnoreCase));
             if(!string.IsNullOrEmpty(found))
             {
                 Markdown = File.ReadAllText(found);
@@ -34,12 +54,12 @@ Welcome to your new app.
 
 <fieldset>
     <legend>Diagnostics</legend>
-    Running application from <code>@DirPath</code>.
+    Running application from <code>@CurrentDirectory</code> on a <i>@HostedFileSystem.Humanize()</i> operating system.
 
     @if(string.IsNullOrEmpty(Errors))
     {
         <ul>
-            @foreach(var item in OtherPaths)
+            @foreach(var item in OtherFiles)
             {
                 <li>@item</li>
             }
